--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
       <footer>
         <ul>
           <li class="like">Like! <span class="like-glyph">&#x2661;</span></li>
+          <div id="error-modal" class="hidden">
+          
+          </div>
         </ul>
       </footer>
     </article>
